<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewSingleService"
    android:background="@color/Gold">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/profile_layout_shape">
            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:elevation="5dp"
                        android:padding="2dp"
                        android:src="@drawable/ic_add_photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_title"
                        android:textSize="25sp"
                        android:layout_gravity="start"
                        android:gravity="start"
                        />

                    <TextView
                        android:id="@+id/description"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_gravity="start"
                        android:gravity="top|start"
                        android:hint="@string/text_view_description"
                        android:background="@drawable/services_edit_text"
                        android:padding="7dp"
                        />


                    <TextView
                        android:id="@+id/phone1"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone1"
                        android:textSize="25sp"
                        />

                    <TextView
                        android:id="@+id/phone2"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone2"
                        android:textSize="25sp"
                        />

                    <Button
                        android:id="@+id/map_button"
                        android:layout_marginTop="20dp"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/ic_google_maps_240"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"/>

                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>