<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/profile_layout_shape">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:contentDescription="@string/todo"
                android:elevation="5dp"
                android:onClick="pickUpImage"
                android:padding="5dp"
                android:src="@color/aqua"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_profile_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:elevation="10dp"
                android:gravity="start"
                android:hint="@string/profile_title"
                app:endIconMode="clear_text"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/red"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="start"
                android:paddingStart="7dp"
                android:background="@drawable/spinner_arrow_selector"/>


            <EditText
                android:id="@+id/servicesEditText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity=""
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/services_edit_text"
                android:gravity="top|start"
                android:hint="@string/text_view_description"
                android:padding="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:gravity="start"
                android:text="@string/Required"
                android:textColor="@color/red"
                android:textSize="12sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_profile_phone1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:elevation="10dp"
                android:gravity="start"
                android:hint="@string/profile_phone_Number"
                app:endIconMode="clear_text"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/red"
                app:prefixText="+20"
                app:startIconDrawable="@drawable/ic_phone"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone1EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_profile_phone2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:elevation="10dp"
                android:gravity="start"
                android:hint="@string/profile_phone_Number"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/red"
                app:prefixText="+20"
                app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone2EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:inputType="phone"
                    android:lines="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/get_location_shape"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/get_location" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>