<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gold">

    <ViewSwitcher
        android:id="@+id/view_switcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/profile_layout_shape">

            <RelativeLayout
                android:id="@+id/progress_bar_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/white_circle"
                android:padding="5dp">
                <ProgressBar
                    android:layout_width="50dp"
                    android:layout_height="50dp"

                    android:theme="@style/ProgressBarTheme"
                    />
            </RelativeLayout>

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:elevation="5dp"
                        android:padding="2dp"
                        android:src="@drawable/ic_add_photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="20dp"
                        android:gravity="start"
                        android:text="@string/profile_title"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/profile_description"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_gravity="start"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/services_edit_text"
                        android:gravity="top|start"
                        android:hint="@string/text_view_description"
                        android:padding="7dp"
                        android:scrollbars="vertical"
                        android:textColorHint="@color/black"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/profile_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/profile_address"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/profile_phone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/phone1"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/profile_phone2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/phone2"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/profile_map_button"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/ic_google_maps_240" />


                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/empty_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/Gold"
            >

            <!-- TODO: Update blank fragment layout -->

            <ImageView
                android:id="@+id/no_account_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/no_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/no_data_tv"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="160dp"
                android:text="You don't have services account yet press to create one"
                app:layout_constraintBottom_toBottomOf="@+id/no_account_imageview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="center"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="324dp"
                android:foregroundGravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </ViewSwitcher>

</androidx.constraintlayout.widget.ConstraintLayout>